<resources>
    <string name="app_name">Swoosh</string>
    <string name="logo_subheading">SWOOSH</string>
    <string name="mens">Mens</string>
    <string name="mixed">Mixed</string>
    <string name="next">Next</string>
    <string name="women">Women</string>
    <string name="desired_league">Desired League</string>
    <string name="bg_desc">background image of Chepauk stadium</string>
    <string name="logo_desc">logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="subheading_main">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="beginner">Beginner</string>
    <string name="finish">Finish</string>
    <string name="pro">Pro</string>
    <string name="i_am_a">I am a</string>

</resources>